Tue Nov 23 10:43:59 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/ast/ast_root.cpp:
        
          Fixed off-by-one error in cleanup of global scope between
          processing multiple IDL files on the command line. We
          were leaving one extra member of the name-reference list
          hanging around (in addtion to the predefined types, which
          persist through the entire execution).
          
        * TAO_IDL/be/be_codegen.cpp:
        
          Fixed the logic that decides whether or not to generate an
          #include of Typecode.h in the *C.cpp file, meshing with
          other logic that decides about generating the same include
          in the *C.h or *A.cpp files. Thanks to Johnny Willemsen
          <jwillemsen@remedy.nl> for pointing out the extra
          #include in IORInterceptorC.cpp.

Tue Nov 23 06:46:10 2004  Chad Elliott  <elliott_c@ociweb.com>

        * tao/Object_SArgument_T.h:
        * tao/Var_Size_SArgument_T.h:

          Removed semi-colons from the ending brace for namespaces.

Tue Nov 23 07:25:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/Notify/Method_Request_Event.cpp (event):
          Removed ACE_INLINE, that shouldn't be used in a cpp file, this also
          fixes a fuzz error

Mon Nov 22 20:15:47 2004  Dale Wilson  <wilson_d@ociweb.com>

        * orbsvcs/orbsvcs/Notify/Reconnection_Registry.cpp:
          s/'/"/ on #include statement

Mon Nov 22 16:37:15 2004  Chad Elliott  <elliott_c@ociweb.com>

        * TAO_IDL/ast/ast_decl.cpp:
        * TAO_IDL/include/ast_decl.h:

          Changed the set_prefix_with_typeprefix and prefix methods to take
          const char* to avoid warnings with some compilers.

Mon Nov 22 19:17:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/Log/Log_Constraint_Visitors.cpp:
          The TAO_ETCL_Literal_Constraint constructor accepts an Any*, so